hphp/hack/test/typecheck/new_inference/eager_solve/reduce_vec_append.php.like_types.exp
File "reduce_vec_append.php", line 18, characters 14-19:
Invalid return type (Typing[4110])
File "reduce_vec_append.php", line 15, characters 6-11:
Expected ~vec<nothing> because the type of the lambda parameter could not be determined. Please add a type hint to the parameter
File "reduce_vec_append.php", line 20, characters 5-9:
But got vec<~vec<[unresolved]>>
